2009-02-02  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/__init__.py:
	* jhbuild/commands/bot.py: replaced jhbuild bot --slvfile option by a
	--slave-dir option, pointing to a directory with slaves.csv (csv with
	slave names and passwords) and XML files describing each hosts
	(options, contact informations, etc) ($slavename.xml); added pages in 
	web view to get those informations.

2009-02-02  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py:
	* jhbuild/config.py: reload (parts of) jhbuild configuration file when
	buildbot server is sent SIGHUP (everything but environment variables).

2009-02-01  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-suites-2.26.modules: move brasero and
	gnome-user-share where they belong in the file (they were below the
	proposed module header)

2009-01-31  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: pessulus branched for 2.24.

2009-01-31  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-suites-2.26.modules: kill gnome-build: it's been
	integrated in anjuta.

2009-01-28  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/cvs.py: revert the exception change
	accidentally commited in last commit.

2009-01-27  Callum McKenzie  <callum@spooky-possum.org>

	* modulesets/gnome-suites-2.26.modules: Explicitly enable the
	mixer applet.

2009-01-26  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: sabayon branched for 2.24.

2009-01-26  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: anjuta removed its
	libgnomeprint/ui dependency.

2009-01-26  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: updated libmapi size and
	md5sum, hooray for changing tarballs.

2009-01-24  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules:
	* modulesets/gnome-external-deps-2.26.modules:
	* modulesets/gnome-suites-2.26.modules: added mono-addins,