@@ -1,5 +1,10 @@
 2009-02-02  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/bot.py: declare bot attributes.
+
+2009-02-02  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/buildbot/status/web/bot.py:
 	* jhbuild/buildbot/status/web/__init__.py:
 	* jhbuild/commands/bot.py: replaced jhbuild bot --slvfile option by a
 	--slave-dir option, pointing to a directory with slaves.csv (csv with
